apps/cis-k8s-v1.5.1/5.1.1_restrict-clusteradmin-rolebindings.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleBindings
metadata: # kpt-merge: /restrict-clusteradmin-rolebindings
  name: restrict-clusteradmin-rolebindings
  annotations:
    # This constraint is not certified by CIS.
    description: Restricts use of the cluster-admin role.
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: 5.1.1
spec:
  enforcementAction: dryrun
  parameters:
    restrictedRole:
      apiGroup: rbac.authorization.k8s.io
      kind: ClusterRole
      name: cluster-admin
    allowedSubjects:
    - apiGroup: rbac.authorization.k8s.io
      kind: Group
      name: 'system:masters'
    # for GKE Hub feature authorizer
    - apiGroup: rbac.authorization.k8s.io
      kind: User
      name: '^service-[0-9]+@gcp-sa-gkehub.iam.gserviceaccount.com$'
      regexMatch: true
    # for ACM to install in-cluster resources
    - apiGroup: rbac.authorization.k8s.io
      kind: User
      name: '^service-[0-9]+@gcp-sa-anthosconfigmanagement.iam.gserviceaccount.com$'
      regexMatch: true
    # for Config Sync reconciler service account
    - kind: ServiceAccount
      name: reconciler-manager
