apps/cis-k8s-v1.5.1/5.2.7-5.2.8-5.2.9_psp-capabilities.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata: # kpt-merge: /psp-capabilities
  name: psp-capabilities
  annotations:
    # This constraint is not certified by CIS.
    description: "Requires containers to drop the `NET_RAW` capability; containers may not have allowedCapabilities set to anything other than an empty array; "
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.2.7, 5.2.8, 5.2.9'
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - config-management-system
    - config-management-monitoring
    - resource-group-system
    - asm-system
    - gke-connect
  parameters:
    allowedCapabilities: []
    requiredDropCapabilities:
    - NET_RAW
